fix email link to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="https://github.com/ArosJames1007" target="_blank">Github</a>
         <a href="https://www.facebook.com/arosjames.1007" target="_blank">Facebook</a>
         <a href="https://www.threads.net/@arosjames1007" target="_blank">Threads</a>
-        <a href="hello.arosjames@gmail.com" target="_blank">Email</a>
+        <a href="mailto:hello.arosjames@gmail.com" target="_blank">Email</a>
         <a href="tel:0777993325">Call me</a>
         <a href="#">My Website</a>
     </section>
